src/app/app.component.less
.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.spacer {
  flex-grow: 1;
}

mat-sidenav-container {
  display: flex;
  flex-direction: row;
  flex: 1;
}

mat-sidenav {
  width: 120px;
  background-color: red;
}

::ng-deep .mat-drawer-inner-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.up,
.down {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  margin-left: 10px;
}

.sidenav-item-icon {
  padding-right: 10px;
}

.main-content {
  flex: 1;
}

